src/content/docs/ja/sdk/unity/v5/integrations/signature-library.mdx
---
title: "SDKシグネチャーライブラリの実装"
description: "Adjust SDKとAdjustサーバー間の通信を保護するために、Unityアプリにシグネチャーライブラリを追加してください。"
slug: "en/sdk/unity/integrations/signature-library"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/unity/v4/integrations/signature-library"
---
<callout type="note"> 

このページでは、Adjust SDK v5の実装手順について説明します。Adjust SDK v4をご使用の場合は、左側のドロップダウンメニューから適切なタブを選択してください。
</Callout> 

AdjustのSDKシグネチャーライブラリは、Adjust SDKのスタンドアローンプラグインとして設計されています。つまり、コードを変更したり、アプリでAdjust SDKを使用する方法を変更したりする必要はありません。プラグインをインストールすると、Adjust SDKによって作成された全てのリクエストが引き続き正常に機能します。

事前準備 \{\#before\-you\-begin\}
----------------------------------

<callout type="note"> 

シグネチャーライブラリは、[16KBのページサイズ](https://developer.android.com/guide/practices/page-sizes)を使用するように設定されており、[バージョン3\.32\.0以降](https://github.com/adjust/adjust_signature_sdk/releases/tag/v3.32.0)で利用可能です。
</Callout> 

シグネチャーライブラリをUnityアプリに実装する前に、以下を確認してください。

* 使用中のAndroid APIバージョンが **21以降** であること。
* お使いのAdjust SDKバージョンが **5\.0\.0以降** であること。この要件は、Adjust SDKが間接的に使用される場合にも適用されます。
* Proguardを使用している場合、シグネチャーライブラリとAdjust SDKの両方で全く同じProguard設定を使用する必要があります。

<callout type="important"> 

Adjust SDKまたはシグネチャーライブラリで外部の暗号化ツールを使用すると、シグネチャーライブラリの機能に影響を与える可能性があります。 外部ツールを使用するかどうか不明な場合は、Adjustの担当者または[support@adjust.comまで](mailto:support@adjust.com)お問い合わせいただき、機能に影響がないか確認してください。
</Callout> 

### シグネチャーv1またはv2ライブラリから移行 \{\#migrating\-from\-signature\-v1\-or\-v2\-library\}

以前にシグネチャーv1またはシグネチャーv2を使用していた場合は、シグネチャーライブラリを連携する前に以前のバージョンを削除する必要があります。これを行うには、以下の手順に従ってください。

* 以前シグネチャーv1を実装したことがある場合は、プロジェクト内のシグネチャー機能を呼び出すコードを削除してください。
* 以前シグネチャーv2を実施したことがある場合は、シグネチャーv2のライブラリをプロジェクトから削除してください。

シグネチャーライブラリを実装する \{\#integrate\-the\-signature\-library\}
---------------------------------------------------------------

<callout type="note"> 

[External dependency Manager for Unity（EDM4U）](https://github.com/googlesamples/unity-jar-resolver)を使用する場合は、この手順をスキップできます。
</Callout> 

Unityプロジェクトにシグネチャーライブラリを実装するには、以下の手順に従ってください。

1. GitHubから[最新の安定版](https://github.com/adjust/adjust_signature_sdk/releases/latest)または[ベータ版](https://github.com/adjust/adjust_signature_sdk/releases)を取得します。
2. Androidアーカイブ（`.aar`）ファイルをUnityプロジェクト内の`Assets/Adjust/Android`ディレクトリに配置します。
3. iOS static framework（`.a`）をUnityプロジェクト内の`Assets/Adjust/iOS`ディレクトリに配置します。

これで、シグネチャーライブラリがプロジェクトに実装されました。デジタル証明書を設定するには、次のセクションの手順に従ってください。

Adjustで証明書を設定する \{\#set\-up\-your\-certificates\-in\-the\-adjust\-suite\}
-----------------------------------------------------------------------------------

<callout type="note"> 

このステップは、アプリが **Android** をターゲットにしている場合にのみ必要です。
</Callout> 

アプリにシグネチャーライブラリを実装すると、Adjust SDKからAdjustに送信される全てのリクエストが署名されます。また、Adjust SDKは、署名証明書のフィンガープリントなどの関連情報をAdjustのサーバーに送信します。

証明書フィンガープリントは、証明書内に保持される公開情報の暗号化ハッシュです。これはアプリの信頼性を検証するために使用できます。

シグネチャーライブラリでは、証明書フィンガープリントの信頼性を検証できません。フィンガープリントを含むリクエストをAdjustが信頼性のあるものとして受理するには、フィンガープリントをAdjustの許可リストに追加する必要があります。これを行うには、証明書フィンガープリントを取得し、Adjustに送信する必要があります。
<callout type="important"> 

署名証明書のフィンガープリントを許可リストに追加する必要があります。フィンガープリントが許可リストに追加されていない場合、アプリからのトラフィックがスプーフィングされる可能性があります。
</Callout> 

#### キーストアから取得する \{\#from\-a\-keystore\}

独自のキーストアを使用している場合、またはAndroid Studioが生成したキーストアの場合は、以下の手順に従って証明書フィンガープリントを取得できます。

1. **アプリのリリースバージョン** の署名に使用されるキーストアファイル（`.jks`）を見つけます。キーストアは、Google Play ストアに送信されるリリースバージョンの署名に使用されたものでなければなりません。キーストアが異なる場合、SDKリクエストは拒否されます。

2. 以下のコマンドを実行して、キーをリストアップします。角括弧内の部分をお客様の情報に置き換えてください。

   ```console
   $ keytool -list -v -keystore <path/to/keystore.jks> -alias <your_key_alias id="sl-md0000000">
   ```

   このコマンドを実行すると、キーストアのパスワードが要求されます。これは、キーストアの生成時に定義したパスワードです。

   最終的な出力結果は以下のようになります。

   ```text
   Alias name: Key0
   Creation date: May 15, 2018
   Entry type: PrivateKeyEntry
   Certificate chain length: 1
   Certificate[1]:
   Owner: CN=[Adjust, GmbH.]
   Issuer: CN=[Adjust, GmbH.]
   Serial number: 642f1b62
   Valid from: Tue May 15 09:46:06 CEST 2018 until: Sat May 09
   09:46:06 CEST 2043
   Certificate fingerprints:
   MD5: E7:88:9F:8C:9D:F4:14:C1:CF:E8:4C:97:F3:F2:3A:E3
   SHA1:
   C4:BD:07:91:BC:09:F8:B6:15:CD:BC:A3:3F:BC:68:8B:C2:EF:4F:F5
   SHA256:
   55:FB:97:0F:46:0F:94:EC:07:EA:01:69:50:5A:20:3F:A0:91:60:A4:F
   1:33:58:EA:76:DC:54:9E:A7:6A:B9:1A
   Signature algorithm name: SHA256withRSA
   Subject Public Key Algorithm: 2048-bit RSA key
   Version: 3
   ```

3. SHA\-1フィンガープリントを保存し、[Adjustの許可リストに追加](#add-your-digital-certificate-fingerprints-to-adjusts-allowlist)します。

#### Google Play Internal App Sharingから取得 \{\#from\-google\-play\-internal\-app\-sharing\}

[Google Play Internal App Sharing](https://support.google.com/googleplay/android-developer/answer/9303479?hl=en)を使用している場合、組織のSHA\-1証明書フィンガープリントと内部テスト証明書フィンガープリントの両方をAdjustに送信し、許可リストに登録する必要があります。

フィンガープリントを抽出する方法：

1. Google Play Consoleからログインします。
2. アプリを選択します。
3. **リリース管理（Release Management）\-\-> アプリのリリース（App Releases）\-\-> 内部アプリ共有の管理（App Signing）> アプリ証明書（App certificates）** を選択します。
4. **内部テスト証明書** と組織のキーストアの両方の **SHA\-1証明書のフィンガープリント** を保存し、[Adjustの許可リストに追加](#add-your-digital-certificate-fingerprints-to-adjusts-allowlist)します。

![Google Play Consoleの証明書ページのスクリーンショット](@images/sig-v3/google-play-internal-sharing.png)

#### Google Play App Signingから取得 \{\#from\-google\-play\-app\-signing\}

[Google Play App Signing](https://support.google.com/googleplay/android-developer/answer/7384423?hl=en)を使用している場合、組織のSHA\-1証明書フィンガープリントと内部テスト用の証明書フィンガープリントの両方をAdjustに送信し、許可リストに登録する必要があります。

フィンガープリントを抽出する方法：

1. Google Play Consoleからログインします。
2. アプリを選択します。
3. **リリース管理（Release Management）\-\-> アプリの署名（App Signing）** を選択します。
4. **アプリ署名証明書** と **アップロード証明書** の両方の **SHA\-1証明書フィンガープリント** を保存します。

![Google Play ConsoleのApp Signingページのスクリーンショット](@images/sig-v3/google-play-signing.png)

#### Huawei AppGallery App Signingから取得 \{\#from\-huawei\-appgallery\-app\-signing\}

Huawei AppGallery App Signingを使用している場合、組織のSHA\-1証明書フィンガープリントと内部テスト用証明書フィンガープリントの両方をAdjustに送信し、許可リストに登録する必要があります。
<callout type="note"> 

Huawei AppGalleryで独自の署名証明書を使用している場合、[キーストアから証明書フィンガープリントを取得する手順](#from-a-keystore)に従ってください。
</Callout> 

フィンガープリントを抽出する方法：

1. AppGallery ConnectのApp Signingページに移動し、アプリ署名証明書（`certificate.pem`）をダウンロードします。

![AppGallery ConnectのApp Signingページのスクリーンショット](@images/sig-v3/huawei-appgallery-signing.png)

2. 証明書をダウンロードしたら、次のコマンドを実行して証明書のSHA\-1フィンガープリントを出力します。

   ```console
   $ openssl x509 -fingerprint -in certificate.pem -noout -SHA1
   ```

   出力結果は以下のようになります。

   ```text
   SHA1 Fingerprint=C4:BD:07:91:BC:09:F8:B6:15:CD:BC:A3:3F:BC:68:8B:C2:EF:4F:F5
   ```

3. フィンガープリントを保存して、[Adjustの許可リストに追加](#add-your-digital-certificate-fingerprints-to-adjusts-allowlist)します。

### デジタル証明書フィンガープリントをAdjustの許可リストに追加する \{\#add\-your\-digital\-certificate\-fingerprints\-to\-adjust\-s\-allowlist\}

<callout type="note"> 

使用する全ての証明書フィンガープリントをAdjustに追加するようにしてください。これには、デバッグバージョンや異なるストアのバージョンが含まれる場合があります。
</Callout> 

証明書のフィンガープリントを取得したら、以下を実行して許可リスト（ホワイトリスト）に追加してください。

1. AppViewでアプリを選択し、アプリの詳細画面を開きます。
2. **不正防止（Protection）** タブを選択します。
3. **疑わしいインストール（Suspicious install）** セクションで、 **編集（Edit）** ボタンを選択します。
4. **Androidフィンガープリント（Android finterprinting）** セクションで、 **新規フィンガープリント（New fingerprint）** を選択します。
5. 表示されるテキストボックスにSHA\-1フィンガープリントを貼り付けます。
6. **Add** を選択します。

これで、フィンガープリントがアプリで許可リストに登録されました。

アプリをテストする \{\#test\-your\-app\}
------------------------------------

[Adjustテストコンソール](https://help.adjust.com/en/article/testing-console)を使用して、アプリにシグネチャーライブラリが実装されていることを確認できます。
<callout type="important"> 

Adjust SDKが **サンドボックス** モードで実行されていることを確認してください。
</Callout> 

シグネチャーライブラリの実装をテストするには、以下の手順に従ってください。

1. インストール情報が送信されるようにするには、テストデバイスからアプリを完全に削除します。

2. デバイスに関する全ての情報を消去するには、テストコンソールを使用してデバイスに関する情報を削除します。また、 Adjust Insightsアプリ（[iOS](https://apps.apple.com/us/app/adjust-insights/id1125517808)と[Android](https://play.google.com/store/apps/details?id=com.adjust.insights)でご利用可能）で取得したアプリの広告IDをパスすることで、forget\_deviceエンドポイントを使用することも可能です。 次の広告IDはいずれも使用できます：`adid` 、 `android_id` 、 `gps_adid` 、 `idfa` 、 `idfv` 、 `imei` 、 `oaid` 。

   コールは以下のようになります。

   ```console
   $ curl -X POST 'https://app.adjust.com/forget_device?app_token={yourAppToken}&id={adid}'
   ```

3. テストコンソールからデバイスのデータを削除したら、テストデバイスにアプリをインストールして起動し、インストール情報をAdjustに送信します。

4. テストデバイスの広告IDをテストコンソールに入力し、インストールイベント情報を取得します。以下の点を確認してください。

   1. `SignatureVerificationResult`フィールドに次の値が表示されている： `Valid Signature`
   2. `SignatureVersion`フィールドに次の値が表示されている： `3`

これらのフィールドが存在し、正しい情報が含まれている場合、シグネチャーライブラリは正常に実装されています。これらのフィールドに他の値が表示されている場合は、実装手順を再度確認するか、[support@adjust.com](mailto:support@adjust.com)までお問い合わせください。

これで、シグネチャーライブラリがアプリに連携されました。 [2回のアトリビューション期間が経過](https://help.adjust.com/en/article/attribution-windows)したら、 [SDKシグネチャーの検証](https://help.adjust.com/en/article/sdk-signature#enforce-signature-validation)を有効化して、署名されたリクエストのみがAdjustで受理されるようにしてください。

トラブルシューティング \{\#troubleshooting\}
------------------------------------

### Upload symbols failed

Xcode 16で構築されたアプリを検証または提出すると、シグネチャーライブラリに関連する`Upload symbols failed`警告が表示される場合があります。シンボルが欠落した状態は意図的なものであり、機能性には影響しないため、無視しても問題ありません。

### AdjustSigSdk.aでの不明なCPUアーキテクチャー \{\#unknown\-cpu\-architecture\-in\-adjustsigsdk\-a\}

Unity Editor 2018以降では、 **Unknown CPU Architecture** というエラーメッセージが表示される場合があります。このエラーメッセージは、UnityエディターがiOS static framework（`.a`）をiOS以外のプラットフォームに適用しようとする場合に表示されます。この問題を解決するには、 `AdjustSigSdk.a`ファイルを選択し、 **Import Settings** メニューで **iOS** を除く全てのプラットフォームの選択を解除してください。

![UnityエディターのAdjustSdk Import Settingsのスクリーンショット](@images/sig-v3/unity-import-settings.png)

シグネチャーライブラリの更新 \{\#updating\-the\-signature\-library\}
------------------------------------------------------------

シグネチャーライブラリは、Adjust SDK v5のアップデートに伴い自動的にアップデートされます。特定のシグネチャーライブラリバージョンが必要な場合は、既存のライブラリを新しいバージョンに置き換え、テストを再度実行してください。[証明書が設定済みで変更されていない](https://help.adjust.com/en/article/sdk-signature#manage-your-certificate-fingerprints)限り、Adjustのアプリロジックや設定をすぐに変更する必要はありません。[シークレットIDが以下の基準を満たす場合は、必ず無効化してください](https://help.adjust.com/en/article/sdk-signature#manage-your-secret-ids)。

* インストールのレポーティングに貢献していない。
* アプリの新バージョンを（全てのアプリのプラットフォームとストアで）リリースしている。

